--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Grandchild Assistant</title>
   <style>
     body {
@@ -30,6 +30,15 @@
       padding: 10px;
       background: #fff;
     }
+    .message {
+      margin: 5px 0;
+    }
+    .user-msg {
+      font-weight: bold;
+    }
+    .assistant-msg {
+      color: #005c99;
+    }
   </style>
 </head>
 <body>
@@ -42,10 +51,10 @@
   <div id="screen2" class="screen">
     <h2>Let’s get to know you</h2>
     <label for="userName">Your Name:</label>
-    <input type="text" id="userName" placeholder="e.g., Mary">
+    <input type="text" id="userName" placeholder="e.g., Mary"/>
 
     <label for="assistantName">Grandchild's Name:</label>
-    <input type="text" id="assistantName" placeholder="e.g., Sam">
+    <input type="text" id="assistantName" placeholder="e.g., Sam"/>
 
     <button onclick="startChat()">Continue to Chat</button>
   </div>
@@ -79,22 +88,32 @@
       const message = input.value.trim();
       if (!message) return;
 
-      appendChat(`${userName}: ${message}`);
+      appendChat(userName, message, 'user');
       input.value = "";
 
-      const response = await fetch("/chat", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ user: userName, assistant: assistantName, message })
-      });
-      const data = await response.json();
-      appendChat(`${assistantName}: ${data.reply}`);
+      try {
+        const response = await fetch("https://your-render-url/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            userName: userName,
+            grandchildName: assistantName,
+            prompt: message
+          })
+        });
+        const data = await response.json();
+        appendChat(assistantName, data.response, 'assistant');
+      } catch (error) {
+        appendChat(assistantName, "Sorry, something went wrong.", 'assistant');
+        console.error(error);
+      }
     }
 
-    function appendChat(text) {
+    function appendChat(sender, text, type) {
       const box = document.getElementById('chatBox');
       const div = document.createElement('div');
-      div.textContent = text;
+      div.className = `message ${type}-msg`;
+      div.textContent = `${sender}: ${text}`;
       box.appendChild(div);
       box.scrollTop = box.scrollHeight;
     }
