--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       background: #fff;
     }
     .message {
-      margin: 5px 0;
+      margin: 8px 0;
     }
     .user-msg {
       font-weight: bold;
@@ -92,7 +92,7 @@
       input.value = "";
 
       try {
-        const response = await fetch("https://your-render-url/chat", {
+        const response = await fetch("https://grandchild-assistant.onrender.com/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
@@ -102,9 +102,14 @@
           })
         });
         const data = await response.json();
-        appendChat(assistantName, data.response, 'assistant');
+
+        if (data.response) {
+          appendChat(assistantName, data.response, 'assistant');
+        } else {
+          appendChat(assistantName, "Hmm, I didn't catch that. Can you try again?", 'assistant');
+        }
       } catch (error) {
-        appendChat(assistantName, "Sorry, something went wrong.", 'assistant');
+        appendChat(assistantName, "Oops! Something went wrong.", 'assistant');
         console.error(error);
       }
     }
