--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h2>Chat with <span id="chatAssistantName"></span></h2>
     <div class="chat-box" id="chatBox"></div>
     <textarea id="chatInput" rows="3" placeholder="Type your message here..."></textarea>
-    <button onclick="sendMessage()">Send</button>
+    <button id="sendBtn" onclick="sendMessage()">Send</button>
     <button onclick="goToScreen(2)">Edit Names</button>
   </div>
 
@@ -86,10 +86,12 @@
     async function sendMessage() {
       const input = document.getElementById('chatInput');
       const message = input.value.trim();
+      const sendBtn = document.getElementById('sendBtn');
       if (!message) return;
 
       appendChat(userName, message, 'user');
       input.value = "";
+      sendBtn.disabled = true;
 
       try {
         const response = await fetch("https://grandchild-assistant.onrender.com/chat", {
@@ -105,12 +107,16 @@
 
         if (data.response) {
           appendChat(assistantName, data.response, 'assistant');
+        } else if (data.error) {
+          appendChat(assistantName, `⚠️ Error: ${data.error}`, 'assistant');
         } else {
-          appendChat(assistantName, "Hmm, I didn't catch that. Can you try again?", 'assistant');
+          appendChat(assistantName, "Hmm, something went wrong.", 'assistant');
         }
       } catch (error) {
-        appendChat(assistantName, "Oops! Something went wrong.", 'assistant');
-        console.error(error);
+        appendChat(assistantName, "🚫 Failed to reach the assistant.", 'assistant');
+        console.error("Request error:", error);
+      } finally {
+        sendBtn.disabled = false;
       }
     }
 
