--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       sendBtn.disabled = true;
 
       try {
-        const response = await fetch("https://grandchild-assistant.onrender.com/chat", {
+        const response = await fetch("https://grandchild-api-399841267532.us-central1.run.app/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
